[gd_scene load_steps=31 format=3 uid="uid://cfb2uf5ywokxq"]

[ext_resource type="Script" path="res://spaceship/characters/person.gd" id="1_ugxba"]
[ext_resource type="Texture2D" uid="uid://b5hb6lwiln0en" path="res://spaceship/characters/textures/npc-rc.png" id="2_1m360"]
[ext_resource type="Texture2D" uid="uid://df72snr3y1u3e" path="res://spaceship/characters/textures/npc-bc.png" id="2_2rmav"]
[ext_resource type="Texture2D" uid="uid://dddhsyo13ipas" path="res://spaceship/characters/textures/npc-bm.png" id="3_btsld"]
[ext_resource type="Texture2D" uid="uid://dtwax6b4ifh0q" path="res://spaceship/characters/textures/npc-rm.png" id="3_ocd6v"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_qobso"]
[ext_resource type="Texture2D" uid="uid://c7sargdmlhkg2" path="res://spaceship/characters/textures/npc-ry.png" id="4_8nshy"]
[ext_resource type="Texture2D" uid="uid://bxcsu5ow5a3wm" path="res://spaceship/characters/textures/npc-by.png" id="4_itxe7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_uba05"]
[ext_resource type="Texture2D" uid="uid://b2hgh28477xg7" path="res://spaceship/characters/textures/npc-gc.png" id="5_3386d"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_k865u"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_1svn6"]
[ext_resource type="Texture2D" uid="uid://dcbxkp62dbmhc" path="res://spaceship/characters/textures/npc-gm.png" id="6_3nvjs"]
[ext_resource type="Texture2D" uid="uid://bsqx6liytm12a" path="res://spaceship/characters/textures/npc-gy.png" id="7_uhba6"]
[ext_resource type="Texture2D" uid="uid://dih762hwpqjcc" path="res://spaceship/characters/textures/var/npc-bc2.png" id="11_a46v7"]
[ext_resource type="Texture2D" uid="uid://ocja1g2ud6qq" path="res://spaceship/characters/textures/var/npc-bm2.png" id="12_f7ndj"]
[ext_resource type="Texture2D" uid="uid://dypuh70gdept6" path="res://spaceship/characters/textures/var/npc-by2.png" id="13_kohxu"]
[ext_resource type="Texture2D" uid="uid://nr87hmvxdvw6" path="res://spaceship/characters/textures/var/npc-gc2.png" id="14_a3f5s"]
[ext_resource type="Texture2D" uid="uid://bvhrk41atysik" path="res://spaceship/characters/textures/var/npc-gm2.png" id="15_7u4vr"]
[ext_resource type="Texture2D" uid="uid://bmguc7wpewtt2" path="res://spaceship/characters/textures/var/npc-gy2.png" id="16_28h1b"]
[ext_resource type="Texture2D" uid="uid://bn3hf0w7my08d" path="res://spaceship/characters/textures/var/npc-rc2.png" id="17_sandy"]
[ext_resource type="Texture2D" uid="uid://dboblgt40x4gv" path="res://spaceship/characters/textures/var/npc-rm2.png" id="18_bhbg8"]
[ext_resource type="Texture2D" uid="uid://cqtrmqy846x23" path="res://spaceship/characters/textures/var/npc-ry2.png" id="19_u4dmq"]

[sub_resource type="Curve" id="Curve_wceam"]
min_value = 0.5
max_value = 2.0
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(1, 2), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_trecp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 512, 128)]
}

[sub_resource type="Animation" id="Animation_x3upp"]
resource_name = "bob"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -21.585), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_686hk"]
resource_name = "idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 512, 128)]
}

[sub_resource type="Animation" id="Animation_2ksa6"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 512, 512, 128)]
}

[sub_resource type="Animation" id="Animation_8yqk0"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 384, 512, 128)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mn5ya"]
_data = {
"RESET": SubResource("Animation_trecp"),
"bob": SubResource("Animation_x3upp"),
"idle": SubResource("Animation_686hk"),
"walk_left": SubResource("Animation_2ksa6"),
"walk_right": SubResource("Animation_8yqk0")
}

[node name="Person" type="Node2D"]
script = ExtResource("1_ugxba")
v_anim_curve = SubResource("Curve_wceam")
sprites1 = Array[Texture2D]([ExtResource("2_2rmav"), ExtResource("3_btsld"), ExtResource("4_itxe7"), ExtResource("5_3386d"), ExtResource("6_3nvjs"), ExtResource("7_uhba6"), ExtResource("2_1m360"), ExtResource("3_ocd6v"), ExtResource("4_8nshy")])
sprites2 = Array[Texture2D]([ExtResource("11_a46v7"), ExtResource("12_f7ndj"), ExtResource("13_kohxu"), ExtResource("14_a3f5s"), ExtResource("15_7u4vr"), ExtResource("16_28h1b"), ExtResource("17_sandy"), ExtResource("18_bhbg8"), ExtResource("19_u4dmq")])

[node name="Graphics" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1m360")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 512, 128)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mn5ya")
}

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_qobso")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_uba05")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("5_k865u")

[node name="To Wander" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("6_1svn6")
to = NodePath("../../Wander")
event = &"start_wander"
delay_in_seconds = "randf_range(2.5, 3.5)"

[node name="Wander" type="Node" parent="StateChart/Root"]
script = ExtResource("5_k865u")

[node name="To Idle" type="Node" parent="StateChart/Root/Wander"]
script = ExtResource("6_1svn6")
to = NodePath("../../Idle")
event = &"wander_finished"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Wander" to="." method="_on_wander_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Wander" to="." method="_on_wander_state_processing"]
